--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -30,6 +30,8 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
+
+
 ol, ul {
 	list-style: none;
 }
@@ -71,6 +73,14 @@ header {
   border-bottom: solid 1px #275da1;
 }
 
+.header {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
+  background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
+  border-bottom: solid 1px #275da1;
+}
+
 header h1 {
   letter-spacing: -1px;
   font-size: 72px;
@@ -80,7 +90,25 @@ header h1 {
   width: 540px;
 }
 
+.header h1 {
+  letter-spacing: -1px;
+  font-size: 72px;
+  color: #fff;
+  line-height: 1;
+  margin-bottom: 0.2em;
+  width: 540px;
+}
+
 header h2 {
+  font-size: 26px;
+  color: #9ddcff;
+  font-weight: normal;
+  line-height: 1.3;
+  width: 540px;
+  letter-spacing: 0;
+}
+
+.header h2 {
   font-size: 26px;
   color: #9ddcff;
   font-weight: normal;
