--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
         <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
 
         <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+        <link rel="stylesheet" href="/css/pygment_trac.css">
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/stylesheet.css">
@@ -20,7 +20,7 @@
       <header>
         <div class="inner">
           <h1>{{ site.name }}</h1>
-          <h2>Development journal</h2>
+          <h2>Notes on Android and server programming with Java and Scala</h2>
           <a href="https://github.com/AliceCengal" class="button"><small>Follow me on</small>GitHub</a>
         </div>
       </header>
