--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,6 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+/*
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -22,6 +23,13 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+*/
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -43,6 +51,12 @@ q:before, q:after {
 	content: '';
 	content: none;
 }
+
+img {
+  float:left;
+  margin-right:50px
+}
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
@@ -84,6 +98,7 @@ header {
 header h1 {
   letter-spacing: -1px;
   font-size: 72px;
+  font-weight: normal;
   color: #fff;
   line-height: 1;
   margin-bottom: 0.2em;
